<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sloop</string>
    <string name="menu_settings">Settings</string>
    <string name="go_button_label">Go</string>
    <string name="url_field_hint">Web address</string>
    <string name="menu_search">Search</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_bookmark_this">Bookmark this dataset</string>
    <string name="menu_bookmark_create">Create a new bookmark</string>
    <string name="hint_search">Search text</string>
    <string name="title_activity_bookmarks">Bookmarks</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_bookmark_edit">Edit bookmark</string>
    <string name="bookmark_url_label">Bookmark URL</string>
    <string name="save_bookmark">Save bookmark</string>
    <string name="label_bookmark_title">Bookmark title</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="label_name">Name</string>
    <string name="label_value">Value</string>
    <string name="hint_filter">Text to filter</string>
    <string name="msg_bookmark_saved">Bookmark saved</string>
    <string name="msg_bookmark_canceled">Bookmark change canceled</string>
    <string name="msg_filter_set">Filtering on %1$s = %2$s.</string>
    <string name="msg_filter_cleared">Cleared filter for %1$s.</string>
    <string name="btn_ok">OK</string>
    <string name="msg_search_no_results">No search results for "%1$s".</string>
    <string name="msg_web_address">Please enter a web address (URL).</string>
    <string name="msg_no_data">No data collection loaded.</string>
    <string name="info_records_unfiltered">Record %1$,d/%2$,d</string>
    <string name="info_records_filtered">Filtered record %1$,d/%2$,d (%3$,d total)</string>
    <string name="alt_filtered">Lock icon (filtered)</string>

</resources>