<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_address_bar"
        android:actionProviderClass="com.megginson.sloop.widgets.AddressActionProvider"
        android:icon="@drawable/ic_web_site"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="Open Data Collection"/>
    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_bookmark_list"
        android:icon="@drawable/ic_labels"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_bookmarks"/>
    <item
        android:id="@+id/menu_bookmark_create"
        android:showAsAction="never"
        android:title="@string/menu_bookmark_this"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>