<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:gravity="left"
    android:orientation="vertical"
    tools:context=".BookmarkEditActivity" >

    <TextView
        android:id="@+id/label_bookmark_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_bookmark_title" />

    <EditText
        android:id="@+id/field_bookmark_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textAutoCorrect" />

    <TextView
        android:id="@+id/label_bookmark_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bookmark_url_label" />

    <EditText
        android:id="@+id/field_bookmark_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_bookmark_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/save_bookmark" />

</LinearLayout>
</ScrollView>